# Toy_JSON_Parser_2

./: .gitignore  CMakeLists.txt  README.md  grammar.md
.github/workflows/: testing.yml
include/data/: IValue.hpp  Value.hpp
include/frontend/: Lexer.hpp  ParseInfo.hpp  Parser.hpp  Token.hpp
include/utils/: FileUtils.hpp
src/: CMakeLists.txt  Main.cpp
src/data/: CMakeLists.txt  Value.cpp
src/frontend/: CMakeLists.txt  Lexer.cpp  Parser.cpp  Token.cpp
src/utils/: CMakeLists.txt  FileUtils.cpp
tests/: test_flat.json  test_nested_array.json  test_nested_object.json
